--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
 }
 body{
-    height: 100vh;
+    max-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -23,13 +24,30 @@ header{
 main{
     display: flex;
 }
-nav{
+.leftmenu{
     width: 200px;
     height: calc(100vh - 70px);
     background-color: red;
     z-index: 20;
 }
-
+.mainpart{
+    padding-top: 70px;
+    width: calc(100% - 200px);
+    background-color: brown;
+    overflow-y: scroll;
+}
+.mainpart nav{
+    width: 100%;
+    /* debug */
+    height: 100px;
+    border: solid 1px black;
+}
+.mainpart .row{
+    width: 100%;
+    /* debug */
+    height: 300px;
+    border: solid 1px black;
+}
 
 
 /* footer */
@@ -37,7 +55,8 @@ footer{
     height: 70px;
     width: 100%;
     background-color: blue;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 20;
 }
