--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body{
     width: 100%;
     display: flex;
     flex-direction: column;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
 /* header */
 header{
@@ -17,8 +23,17 @@ header{
     position: fixed;
     background-color: black;
     z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
-
+.upgrade{
+    margin-right: 10px;
+    border: solid 1px white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 11px;
+}
 
 /* main */
 main{
