--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ main{
     flex-direction: column;
     color: #a3a3a3;
 }
-.leftmenu img{
-    width: 70%;
+.logo{
+    width: 50%;
     margin-top: 15px;
     margin-left: 20px;
 }
@@ -71,15 +71,33 @@ main{
 .leftmenu h4{
     margin-top: 30px;
     padding-left: 20px;
+    color: white;
+    padding-bottom: 3px;
+}
+.here{
+    border-left: solid 2px yellow;
+}
+.leftmenu .here a{
+    color: white;
 }
 .leftmenu a{
     color: #a3a3a3;
     display: flex;
     align-items: center;
 }
-.leftmenu i{
+.leftmenu ul i{
+    background-color: #a3a3a3;
+    color: black;
+    padding: 5px;
     font-size: 20px;
     margin-right: 10px;
+}
+.overflow:hover{
+    overflow-y: scroll;
+}
+.icon{ 
+    margin-right: 5px;
+    height: 25px;
 }
 
 
@@ -87,7 +105,7 @@ main{
 .mainpart{
     padding-top: 70px;
     width: calc(100% - 200px);
-    background-color: brown;
+    background-color: #141922;
     overflow-y: scroll;
 }
 .mainpart nav{
