--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ main{
     display: flex;
     flex-direction: column;
     color: #a3a3a3;
+    position: relative;
 }
 .logo{
     width: 50%;
@@ -77,6 +78,9 @@ main{
 .here{
     border-left: solid 2px yellow;
 }
+.here img{
+    filter: none;
+}
 .leftmenu .here a{
     color: white;
 }
@@ -98,6 +102,38 @@ main{
 .icon{ 
     margin-right: 5px;
     height: 25px;
+    filter: opacity(0.5);
+}
+.menufoot{
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    margin-left: 20px;
+    width: 80%;
+    background-color: black;
+    z-index: 10;
+    height: 70px;
+    
+}
+.download{
+    font-size: 10px;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.584);
+    padding: 4px;
+    padding-left: 0;
+}
+.download img{
+    height: 18px;
+    margin-right: 10px;
+}
+.login{
+    margin-top: 8px;
+    padding: 4px;
+    padding-left: 0;
+}
+.login .icon{
+    background-color: grey;
+    border-radius: 50%;
+    filter: none;
 }
 
 
