--- a/css/style.css
+++ b/css/style.css
@@ -103,12 +103,16 @@ main{
     display: flex;
     align-items: center;
 }
-.leftmenu ul i{
+.fa-plus{
     background-color: #a3a3a3;
     color: black;
     padding: 5px;
     font-size: 13px;
     margin-right: 10px;
+    margin-left: 10px;
+}
+.playplus{
+    margin-top: 10px;
 }
 .leftmenu ul  i:hover{
     background-color: white;
@@ -118,7 +122,6 @@ main{
     height: 20px;
     filter: opacity(0.5);
 }
-
 .menufoot{
     display: flex;
     flex-direction: column;
@@ -154,6 +157,9 @@ main{
     margin-right: 20px;
     background-color: #a3a3a3;
 }
+.logo-small .icon{
+    filter: none;
+}
 
 
 .mainpart{
@@ -163,6 +169,7 @@ main{
     overflow-y: scroll;
     padding-left: 20px;
     margin-bottom: 60px;
+    height: calc(100vh - 60px);
 }
 .mainpart nav{
     width: 100%;
@@ -204,6 +211,7 @@ h2{
 }
 .colonna{
     width: 140px;
+    height: 170px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -248,6 +256,9 @@ h2{
 }
 .subtitle{
     color: #a3a3a3;
+}
+.short{
+    max-width: 350px;
 }
 
 
@@ -384,13 +395,23 @@ footer .fa-play{
 }
 
 
+
+
+@media screen and (min-width:700px) and (max-width:1200px){
+.row{
+    flex-wrap: wrap;
+}
+.colonna{
+    margin-right: 2vw;
+}
+}
+
 @media screen and (max-width:700px){
     .row{
         flex-wrap: wrap;
     }
     .colonna{
-        margin-right: initial;
-        padding-right: 1vw;
+        margin-right: 2vw;
     }
     .leftmenu{
         width: 40px;
@@ -403,15 +424,18 @@ footer .fa-play{
     }
     .menushort{
         display: block;
-        height: 100px;
+        height: 200px;
+    }
+    .menushort img{
+        width: 70%;
     }
     .asidefoot{
         margin: auto;
         padding: 0;
-        width: 33%;
+        width: 30%;
     }
     .midfoot{
-        width: 33.333%;
+        width: 40%;
     }
     .pulsanti{
         width: 80%;
@@ -419,12 +443,15 @@ footer .fa-play{
     .menufootshort{
         display: flex;
         flex-direction: column;
-        height: calc(100% - 100px);
+        height: calc(100% - 200px);
         align-items: center;
         justify-content: flex-end;
     }
     .download img{
        width: 25px;
        height: auto;
+    }
+    .playimage{
+        display: none;
     }
 }
