--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul{
 /* header */
 header{
     width: 100%;
-    height: 60px;
+    height: 50px;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.671);
     z-index: 10;
@@ -35,7 +35,7 @@ header{
 .upgrade{
     margin-right: 10px;
     border: solid 1px white;
-    padding: 10px 20px;
+    padding: 8px 15px;
     border-radius: 20px;
     font-size: 9px;
     margin-right: 30px;
@@ -53,19 +53,19 @@ main{
     display: flex;
 }
 .leftmenu{
-    width: 200px;
-    height: calc(100vh - 60px);
+    width: 140px;
+    height: calc(100vh - 50px);
     background-color: black;
     z-index: 20;
     color: #a3a3a3;
-    font-size: 11px;
+    font-size: 10px;
 }
 .notoverflw{
-    height: 30%;
-    font-size: 13px;
+    height: 25%;
+    font-size: 10px;
 }
 .overflow{
-    height: 55%;
+    height: 60%;
 }
 .logo{
     width: 60%;
@@ -73,18 +73,17 @@ main{
     margin-left: 5px;
 }
 .leftmenu nav{
-    margin-top: 10px;
+    margin-top: 3px;
 }
 .leftmenu li{
     text-decoration: none;
     padding-left: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .leftmenu:hover a:hover{
     color: white;
 }
 .leftmenu h4{
-    margin-top: 30px;
     padding-left: 10px;
     color: white;
     padding-bottom: 3px;
@@ -110,9 +109,6 @@ main{
     font-size: 13px;
     margin-right: 10px;
     margin-left: 10px;
-}
-.playplus{
-    margin-top: 10px;
 }
 .leftmenu ul  i:hover{
     background-color: white;
@@ -163,13 +159,13 @@ main{
 
 
 .mainpart{
-   padding-top: 60px;
-    width: calc(100% - 200px);
+   padding-top: 50px;
+    width: calc(100% - 140px);
     background-color: #141922;
     overflow-y: scroll;
     padding-left: 20px;
     margin-bottom: 60px;
-    height: calc(100vh - 60px);
+    height: calc(100vh - 50px);
 }
 .mainpart nav{
     width: 100%;
@@ -210,8 +206,7 @@ h2{
     margin-top: 2px;
 }
 .colonna{
-    width: 140px;
-    height: 170px;
+    width: 170px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -258,13 +253,13 @@ h2{
     color: #a3a3a3;
 }
 .short{
-    max-width: 350px;
+    max-width: 365px;
 }
 
 
 /* footer */
 footer{
-    height: 60px;
+    height: 50px;
     width: 100%;
     background-color: #282828;
     position: fixed;
@@ -308,7 +303,7 @@ footer div{
     color: white;
 }
 .asidefoot i{
-    font-size: 16px;
+    font-size: 14px;
     margin: 0 10px;
     padding: 1px;
 }
@@ -329,7 +324,7 @@ footer div{
     margin: auto;
 }
 .time i{
-    font-size: 15px;
+    font-size: 14px;
     color: white;
 }
 footer .fa-play{
@@ -393,13 +388,21 @@ footer .fa-play{
 .menufootshort{
     display: none;
 }
+.midfoot i:hover{
+    animation: rotate 5s;
+}
 
 
-
+@keyframes rotate {
+    100%{
+        transform: rotate(360deg);
+    }
+}
 
 @media screen and (min-width:700px) and (max-width:1200px){
 .row{
     flex-wrap: wrap;
+    height: 199px;
 }
 .colonna{
     margin-right: 2vw;
@@ -452,6 +455,14 @@ footer .fa-play{
        height: auto;
     }
     .playimage{
+        display: none;
+    }
+}
+@media screen and (max-height:500px){
+    .notoverflw{
+        height: 85%;
+    }
+    .overflow{
         display: none;
     }
 }
