--- a/css/style.css
+++ b/css/style.css
@@ -479,5 +479,12 @@ footer .fa-play{
     }
     .overflow{
         display: none;
+    
+    }
+    header{
+        display: none;
+    }
+    .mainpart{
+        padding-top: 0;
     }
 }
